[package]
name = "esc-api"
version = "1.20.13"
authors = ["Yorick Laupa <yorick.laupa@eventstore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-rustls = "0.20"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.1"
http = "0.2"
log = "0.4"
validator = "0.10"
chrono = { version = "0.4", features = ["serde"] }
bytes = "0.5"
