[package]
name = "esc"
version = "1.22.0"
authors = ["Yorick Laupa <yorick.laupa@eventstore.com>", "Tim Simpson <tim.simpson@eventstore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esc-api = { path = "../api"}
esc-client-base = { path = "../base"}
esc-client-store = { path = "../store"}

structopt = "0.3"
tokio = { version = "1.18", features = ["macros", "fs", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.7"
dirs = "2.0.2"
hyper = "0.13"
serde_json = "1.0"
jsonwebtoken = "7.1"
chrono = "0.4"
lazy_static = "1.4"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
url = "2.1"
rpassword = "4.0"
rustyline = "6.2"
cidr = "0.1"
clap = "*"
clap_complete = "*"
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"] }
validator = "0.10"