[package]
name = "esc-client-store"
version = "0.1.0"
authors = ["Tim Simpson <timsimpson4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esc-client-base = { path = "../base"}
esc-client-generated = { path = "../generated"}


serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.1"
http = "0.2"
log = "0.4.14"
validator = "0.10"
chrono = { version = "0.4", features = ["serde"] }
bytes = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1.18", features = ["macros", "fs"] }
toml = "0.5"
lazy_static = "1.4"
dirs = "3.0.2"
hyper = "0.14.10"
jsonwebtoken = "8.1.0"
thiserror = "1.0.26"
rpassword = "5.0.1"
rustyline = "8.2.0"
env_logger = "0.9.0"

[dev-dependencies]
regex = "1.5.4"

